# mac-system-info

./: .ccls  CMakeLists.txt  README.md  System.hpp  SystemInfo.cpp  SystemInfo.hpp  build.sh  main.cpp
common/: types.hpp
core/: SystemInfo.cpp  SystemInfo.hpp
core/smc/: smc.c  smc.h
core/types/: Cpu.cpp  Cpu.hpp  Data.hpp  FansInfo.cpp  FansInfo.hpp  Gpu.cpp  Gpu.hpp  Memory.cpp  Memory.hpp  Processor.cpp  Processor.hpp
core/util/: System.cpp  System.hpp
smc/: smc.c  smc.h
system/: SystemInfo.cpp  SystemInfo.hpp
system/smc/: smc.c  smc.h
system/types/: Data.cpp  Data.hpp  FansInfo.cpp  Gpu.cpp  Gpu.hpp  Memory.hpp  Processor.cpp  Processor.hpp
system/util/: System.hpp
types/: Data.hpp  FansInfo.cpp  FansInfo.hpp  Memory.cpp  Memory.hpp  Processor.cpp  Processor.hpp
ui/console/: Controller.cpp  Controller.hpp  UI.cpp  UI.hpp
util/: System.cpp  System.hpp
